# hotchpotch

./: Cargo.toml  LICENSE  README.md  hotchpotch.pyi  pyproject.toml
.github/workflows/: CI.yml
python/hotchpotch/: __init__.py
src/: config.rs  lib.rs  parser.rs  serializer.rs  value.rs
tests/: test_hotchpotch.py
